--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<ul>
 					<li><a href="#home">HOME</a></li>
 					<li><a href="#about">ABOUT</a></li>
-					<li><a href="#contact">CONTACT</a></li>
+					<li><a href="#contact">Gregory</a></li>
 				</ul>
 			</div>
 			
