--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="nav">
 				<ul>
 					<li><a href="#home">HOME</a></li>
-					<li><a href="#about">ABOUT</a></li>
+					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="#contact">CONTACT</a></li>
 				</ul>
 			</div>
