--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<div class="background">
 			<div class="nav">
 				<ul>
-					<li><a href="#home">HOME</a></li>
+					<li><a href="index.html">HOME</a></li>
 					<li><a href="about.html">ABOUT</a></li>
-					<li><a href="#contact">CONTACT</a></li>
+					<li><a href="context.html">CONTACT</a></li>
 				</ul>
 			</div>
 			
