--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 		<div class="background">
 			<div class="nav">
 				<ul>
-					<li><a href="home.html">HOME</a></li>
+					<li><a href="index.html">HOME</a></li>
 					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
