--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
 				</div>
 			</div>
 			
-			<p class="intro">Gaxbax was created by developer Gabriel Mendoza who had b/
-      Envisioned a utility for people to connect with others. Gaxbax uses Google's APIs b/
+			<p class="intro">Gaxbax was created by developer Gabriel Mendoza who had text<br>
+      Envisioned a utility for people to connect with others. Gaxbax uses Google's APIs text<br>
       And implements a map interface to allocate services around users. </p>
 			
 			<div class="signupNav">
